Added test 3 - bordered screen

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,9 @@
 
 PRG = tcc_test
 PRG = test_2
+PRG = test_3
 LIBS_PATH = ../lib/
-LIBS = $(LIBS_PATH)easy_tcc.c
+LIBS = $(LIBS_PATH)*.c
 
 all:
 	gcc -I$(LIBS_PATH) -o $(PRG) $(PRG).c $(LIBS)
